--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,15 @@
 {
   "vendor": "vtex",
-  "name": "base-store-component",
+  "name": "facebook-open-graph",
   "version": "0.0.1",
-  "title": "IO Base Component",
-  "description": "IO Base component",
-  "defaultLocale": "pt-BR",
+  "title": "Facebook Open Graph",
+  "description": "Facebook Open Graph",
   "builders": {
-    "messages": "1.x",
-    "store": "0.x",
     "react": "3.x"
   },
   "mustUpdateAt": "2019-04-02",
   "scripts": {
     "postreleasy": "vtex publish --verbose"
   },
-  "dependencies": {
-    "vtex.styleguide": "9.x"
-  }
+  "dependencies": {}
 }
