--- a/react/package.json
+++ b/react/package.json
@@ -4,12 +4,10 @@
     "lint": "tsc --noEmit && eslint --ext ts ."
   },
   "dependencies": {
-    "@vtex/css-handles": "^1.0.0",
-    "classnames": "^2.2.6",
     "ramda": "^0.26.1",
     "react": "^16.8.3",
-    "react-intl": "^2.7.2",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "react-intl": "^2.7.2"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
@@ -19,8 +17,9 @@
     "@types/prop-types": "^15.7.0",
     "@types/ramda": "^0.26.5",
     "@types/react": "^16.8.10",
+    "@types/react-helmet": "^5.0.8",
     "@types/react-intl": "^2.3.17",
-    "@vtex/test-tools": "^0.2.0",
+    "@vtex/test-tools": "^0.3.2",
     "apollo-client": "^2.5.1",
     "eslint": "^5.16.0",
     "eslint-config-vtex": "^10.1.0",
