--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,8 @@
   "scripts": {
     "postreleasy": "vtex publish --verbose"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vtex.product-context": "0.x"
+  },
+  "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
