--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -15,11 +15,6 @@
   "typeAcquisition": {
     "enable": false
   },
-  "include": [
-    "./typings/*.d.ts",
-    "./**/*.tsx",
-    "components/withImage.d.ts",
-    "Footer.js"
-  ],
+  "include": ["./typings/*.d.ts", "./**/*.tsx"],
   "exclude": ["node_modules"]
 }
