--- a/react/.eslintrc
+++ b/react/.eslintrc
@@ -1,19 +1,11 @@
 {
-  "extends": "vtex",
+  "extends": "vtex-react",
   "env": {
+    "browser": true,
     "es6": true,
-    "jest": true,
-    "node": true
+    "jest": true
   },
   "rules": {
-    "prettier/prettier": "off",
-    "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/no-use-before-define": "off",
-    "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/no-object-literal-type-assertion": "off",
-    "@typescript-eslint/no-explicit-any": "off"
-  },
-  "globals": {
-    "metrics": true
+    "@typescript-eslint/no-use-before-define": 0
   }
 }
