--- a/react/package.json
+++ b/react/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "vtex-test-tools test",
-    "lint": "tsc --noEmit && eslint --ext ts ."
+    "lint": "tsc --noEmit && eslint --ext ts,tsx ."
   },
   "dependencies": {
     "ramda": "^0.26.1",
@@ -22,7 +22,7 @@
     "@vtex/test-tools": "^0.3.2",
     "apollo-client": "^2.5.1",
     "eslint": "^5.16.0",
-    "eslint-config-vtex": "^10.1.0",
+    "eslint-config-vtex-react": "^4.1.0",
     "prettier": "^1.16.4",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "3.3.4000"
