--- a/react/package.json
+++ b/react/package.json
@@ -1,30 +1,25 @@
 {
   "scripts": {
     "test": "vtex-test-tools test",
-    "lint": "tsc --noEmit && eslint --ext ts,tsx ."
+    "lint": "eslint --ext ts,tsx ."
   },
   "dependencies": {
-    "ramda": "^0.26.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-intl": "^2.7.2"
   },
   "devDependencies": {
+    "@apollo/react-testing": "^3.1.4",
     "@types/classnames": "^2.2.7",
     "@types/graphql": "^14.2.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.0",
     "@types/prop-types": "^15.7.0",
-    "@types/ramda": "^0.26.5",
     "@types/react": "^16.8.10",
     "@types/react-helmet": "^5.0.8",
     "@types/react-intl": "^2.3.17",
-    "@vtex/test-tools": "^0.3.2",
+    "@vtex/test-tools": "^3.0.0",
     "apollo-client": "^2.5.1",
-    "eslint": "^5.16.0",
-    "eslint-config-vtex-react": "^4.1.0",
-    "prettier": "^1.16.4",
-    "tslint-eslint-rules": "^5.4.0",
     "typescript": "3.5.2"
   },
   "version": "1.0.5"
