--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,21 @@
     "postreleasy": "vtex publish --verbose"
   },
   "dependencies": {
-    "vtex.product-context": "0.x"
+    "vtex.product-context": "0.x",
+    "vtex.apps-graphql": "3.x"
+  },
+  "settingsSchema": {
+    "title": "Structured data",
+    "type": "object",
+    "access": "public",
+    "properties": {
+      "disableOffers": {
+        "title": "Disable Offers",
+        "type": "boolean",
+        "default": false,
+        "description": "Disable product offers"
+      }
+    }
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
